# natural-language-video-clipper

./: .gitignore  README.md  cli.py  cli_enhanced.py  example.py  extractor.py  extractor_enhanced.py  pyproject.toml  requirements.txt  ve
docs/plans/: 2026-01-04-ui-design.md  2026-01-04-ui-implementation.md
src/video_clipper/: __init__.py  bridge.py  bridge_server.py  cli.py  embeddings.py  index.py  models.py  scene.py  search.py  transcription.py  video.py
ui/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/client/: App.tsx  index.css  types.ts
ui/src/client/components/: ClipList.tsx  ExportButton.tsx  FileSelector.tsx  SearchBar.tsx  Timeline.tsx  VideoPlayer.tsx  index.ts
ui/src/client/hooks/: useApi.ts
ui/src/server/: index.ts  python.ts
ui/src/server/routes/: export.ts  search.ts  video.ts
