[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-clipper"
version = "0.1.0"
description = "Extract video clips using natural language descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper>=20231117",
    "clip @ git+https://github.com/openai/CLIP.git",
    "scenedetect[opencv]>=0.6.2",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "Pillow>=10.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
fast = [
    "faster-whisper>=0.10.0",
]

[project.scripts]
ve = "video_clipper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
